# gimp-plugin-astronomy

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  intltool-merge  intltool-update
doc/: Makefile.am  Makefile.in  documentation.tex
po/: Makefile.in  Makevars  POTFILES  de.gmo  de.po  gimp-plugin-astronomy.pot  ru.gmo  ru.po
rpm/: gimp-plugin-astronomy.spec  gimp-plugin-astronomy.spec.in
scripts/: Makefile.am  Makefile.in  background_gradient_batch.scm  border_information.scm  brightness_contrast_batch.scm  dark_subtraction.scm  flat_division.scm  mode_batch.scm  normalize_batch.scm
src/: Makefile.am  Makefile.in  alignment.c  artificial_galaxy.c  artificial_stars.c  background_gradient.c  config.h.in  merge.c  star_rounding.c
