## Process this file with automake to produce Makefile.in

FILES =	background_gradient_batch.scm \
	border_information.scm \
	brightness_contrast_batch.scm \
	dark_subtraction.scm \
	flat_division.scm \
	mode_batch.scm \
	normalize_batch.scm

scriptdir = $(GIMP_DATADIR)/scripts
script_DATA = $(FILES)

EXTRA_DIST =  $(FILES)
